--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     let popupStep = 0;
     let noteStep = 0;
     const notes = [
-      "Utututu Happy b'day nggaaa, can't describe how much i love you. Semoga level up today kamu bisa menggapai apa yang kamu mau, yaa? dan bisa jadi apa aja yang kamu harapkan, be better and just be yourself🤍 apapun keinginan kamu jugaa semoga terkabul yaa, you're shining especially bright todayy💐",
+      "Utututu Happy b'day yaa, can't describe how much i love you. Level up todayy semogaa kamu bisa menggapai apa yang kamu mau, yaa? dan bisa jadi apa yang kamu harapkan, be better and just be yourself🤍 apapun keinginan kamu jugaa semoga terkabul yaa, you're shining especially bright todayy💐",
       "<img src='lembar2.jpg' class='note-img'>",
-      "Gimana hari inii?? Apaa kamu capeee? Kalo kamu capee istirahatt yaa, jangan lupa makan sama banyakin minum air putihh🤍",
-      "Semangat berjuang terus yaa sampai kamu bisa mendapatkan apa yang kamu inginkan, jangan lupa bersyukur jugaa dan selalu sempatin buat apresiasi diri kamu karena sudah selalu berjuang untuk lebih baik kalo kamu capee butuh tempat ceritaa ada akuu jangan dipendem sendirii yaa?",
-      "kamuu juga jangan berpikiran aneh aneh lagii yaa? Jangan ngambekan, Jangan cuek cuek nanti cepet tua😒 kamuu gabolee bersaing sama siapapun karnaaa mau gimanapun kamuu pemenangnya gaada orang lama, orang baru atau masalalu!! kalo kamu masih mikir gitu kamu kaya e harus tak culik terus tak sekap (dihatiku)🙂",
+      "Gimana hari inii?? Capeee gaa? Kalo kamu capee istirahatt yaa, jangan lupa makan sama banyakin minum air putihh🤍",
+      "Semangat berjuang terus yaa sampai kamu bisa mendapatkan apa yang kamu inginkan, jangan lupa bersyukur jugaa dan selalu sempatin buat apresiasi diri kamu karena sudah selalu berjuang untuk lebih baik pokoknyaa kalo kamu capee butuh tempat ceritaa ada akuu jangan dipendem sendirii yaa?",
+      "Kamuu juga jangan berpikiran aneh aneh, Jangan ngambekan, Jangan cuek cuek nanti cepet tua😒 kamuu gabolee bersaing sama siapapun karnaaa mau gimanapun kamuu tetap pemenangnya. Gaada orang lama, orang baru atau masalalu!! kalo kamu masih mikir gitu kamu kaya e harus tak culik terus tak sekap (dihatiku)🙂",
       "<img src='lembar6.jpg' class='note-img'>",
       "<img src='lembar7.jpg' class='note-img'>",
       "<img src='lembar8.jpg' class='note-img'>",
