--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <div id="welcomePopup" class="popup">
     <h2>Welcome Arjingga!</h2>
-    <p>Masukkan kata sandi:</p>
+    <p>Aktifkan situs dekstop!</p>
     <input type="password" id="passwordInput" placeholder="Password...">
     <br>
     <button onclick="checkPassword()">Masuk</button>
@@ -105,11 +105,11 @@
     <div id="notePages">
       <p id="noteText" class="fade-in">Klik untuk mulai baca catatan 🎁</p>
     </div>
-    <button onclick="nextNotePage()">Next Page</button>
+    <button onclick="nextNotePage()">🤍</button>
   </div>
 
   <div id="finalPopup" class="popup hidden">
-    <h2>Selamatt bobooo😙<br>luv uuu<3! &lt;3</h2>
+    <h2>Maaf yaa aku belum bisa kaya orang orang ngasi note book gitu tapii karena resiko kamu kenal aku yang anak TKJ jadii aku buatin nya bentuk web😋 aku buat ini effort lo aku belajar coding buat inii jadi semoga kamu sukaa, dah kamu skrg tidur yaa!! Selamatt bobooo😙<br>luv uuu<3! &lt;3</h2>
   </div>
 
   <img class="balloon" src="balloon1.png" style="left: 20%; animation-delay: 0s;">
@@ -131,8 +131,8 @@
       "Utututu Happy b'day yaa, can't describe how much i love you. Level up todayy semogaa kamu bisa menggapai apa yang kamu mau, yaa? dan bisa jadi apa yang kamu harapkan, be better and just be yourself🤍 apapun keinginan kamu jugaa semoga terkabul yaa, you're shining especially bright todayy💐",
       "<img src='lembar2.jpg' class='note-img'>",
       "Gimana hari inii?? Capeee gaa? Kalo kamu capee istirahatt yaa, jangan lupa makan sama banyakin minum air putihh🤍",
-      "Semangat berjuang terus yaa sampai kamu bisa mendapatkan apa yang kamu inginkan, jangan lupa bersyukur jugaa dan selalu sempatin buat apresiasi diri kamu karena sudah selalu berjuang untuk lebih baik pokoknyaa kalo kamu capee butuh tempat ceritaa ada akuu jangan dipendem sendirii yaa?",
-      "Kamuu juga jangan berpikiran aneh aneh, Jangan ngambekan, Jangan cuek cuek nanti cepet tua😒 kamuu gabolee bersaing sama siapapun karnaaa mau gimanapun kamuu tetap pemenangnya. Gaada orang lama, orang baru atau masalalu!! kalo kamu masih mikir gitu kamu kaya e harus tak culik terus tak sekap (dihatiku)🙂",
+      "Dibukaa yaa kadonya semoga kamu sukaa😋 Semangat berjuang terus yaa sampai kamu bisa mendapatkan apa yang kamu mauu, jangan lupa bersyukur jugaa dan selalu sempatin buat apresiasi diri kamu karena sudah selalu berjuang untuk lebih baik pokoknyaa😙 kalo kamu capee butuh tempat ceritaa ada akuu jangan dipendem sendirii yaa?",
+      "Jangan suka berpikiran aneh aneh!, Jangan ngambekan!, Jangan cuek cuek nanti cepet tua!😒 Kamuu pokoknya gabolee bersaing sama siapapun karnaaa mau gimanapun kamuu tetap pemenangnya. Gaada orang lama, orang baru atau masalalu!! kalo kamu masih mikir gitu kamu kaya e harus tak culik terus tak sekap (dihatiku)🙂",
       "<img src='lembar6.jpg' class='note-img'>",
       "<img src='lembar7.jpg' class='note-img'>",
       "<img src='lembar8.jpg' class='note-img'>",
