--- a/index.html
+++ b/index.html
@@ -1,173 +1,134 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Created by Syaa</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday - Flipbook</title>
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Comic Neue', sans-serif;
+      font-family: 'Comic Neue', cursive;
       background: url('background.jpg') no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
     }
-    .popup {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #fff5e6;
-      border-radius: 20px;
-      padding: 30px;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      transition: all 0.5s ease;
-      max-width: 90%;
-      z-index: 100;
-      font-size: 20px;
+    #flipbook {
+      width: 90vw;
+      height: 90vh;
+      margin: 5vh auto;
+      position: relative;
+      perspective: 2000px;
     }
-    .hidden {
-      display: none;
-    }
-    input[type="password"] {
-      padding: 10px;
-      font-size: 16px;
+    .page {
+      width: 100%;
+      height: 100%;
+      background: #fff5e6;
       border-radius: 10px;
-      border: 1px solid #ccc;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform-origin: left;
+      transform-style: preserve-3d;
+      transition: transform 1s;
+      overflow-y: auto;
+      padding: 30px;
+    }
+    .page h2, .page p {
+      margin: 20px;
+      font-size: 1.2rem;
+    }
+    .flipped {
+      transform: rotateY(-180deg);
+      z-index: 0;
+    }
+    .navigation {
+      text-align: center;
+      margin-top: 20px;
     }
     button {
-      margin-top: 10px;
       padding: 10px 20px;
-      font-size: 16px;
       border-radius: 10px;
       background-color: #ffd9b3;
       border: none;
+      font-size: 16px;
       cursor: pointer;
+      margin: 0 5px;
     }
-    img.note-img {
+    .note-img {
       max-width: 100%;
-      max-height: 65vh;
       border-radius: 10px;
-    }
-    .balloon {
-      position: absolute;
-      bottom: -100px;
-      width: 50px;
-      animation: float 10s infinite;
-    }
-    @keyframes float {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(-110vh); }
-    }
-    .fade-in {
-      animation: fadeIn 0.8s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.95); }
-      to { opacity: 1; transform: scale(1); }
-    }
-    #noteText {
-      font-size: 22px;
-      line-height: 1.6;
-      padding: 10px;
     }
   </style>
 </head>
-<body>
-  <audio id="bgMusic" loop>
-    <source src="sempurna.mp3" type="audio/mp3">
-  </audio>  <div id="welcomePopup" class="popup">
+<body><audio id="bgMusic" loop autoplay>
+  <source src="sempurna.mp3" type="audio/mp3">
+</audio><div id="flipbook">
+  <div class="page">
     <h2>Welcome Arjingga!</h2>
-    <p>Aktifkan situs dekstop!</p>
-    <input type="password" id="passwordInput" placeholder="Password...">
-    <br>
-    <button onclick="checkPassword()">Masuk</button>
-  </div>  <div id="calendarPopup" class="popup hidden">
-    <img src="calendar-july.jpg" alt="Kalender Juli" class="note-img">
-    <p>This your dayy!</p>
-    <button onclick="nextPopup()">Next</button>
-  </div>  <div id="popup1" class="popup hidden">
-    <img src="popup1.jpg" alt="Popup 1" class="note-img">
-    <button onclick="nextPopup()">Next</button>
-  </div>  <div id="popup2" class="popup hidden">
-    <div id="notePages">
-      <p id="noteText" class="fade-in">Klik untuk mulai baca catatan 🎁</p>
-    </div>
-    <button onclick="nextNotePage()">🤍</button>
-  </div>  <div id="finalPopup" class="popup hidden">
-    <h2>Maaf yaa aku belum bisa kaya orang orang ngasi note book gitu tapii karena resiko kamu kenal aku yang anak TKJ jadii aku buatin nya bentuk web😋 aku buat ini effort lo aku belajar coding buat inii jadi semoga kamu sukaa, dah kamu skrg tidur yaa!! Selamatt bobooo😙<br>luv uuu<3! &lt;3</h2>
-  </div>  <img class="balloon" src="balloon1.png" style="left: 20%; animation-delay: 0s;">
-  <img class="balloon" src="balloon2.png" style="left: 40%; animation-delay: 3s;">
-  <img class="balloon" src="balloon3.png" style="left: 60%; animation-delay: 5s;">  <script>
-    window.onload = function() {
-      const correctPassword = "A25072025";
-      const welcomePopup = document.getElementById("welcomePopup");
-      const calendarPopup = document.getElementById("calendarPopup");
-      const popup1 = document.getElementById("popup1");
-      const popup2 = document.getElementById("popup2");
-      const finalPopup = document.getElementById("finalPopup");
-      const audio = document.getElementById("bgMusic");
+    <p>Selamat ulang tahunnn! Ayo buka halaman selanjutnya yaa~</p>
+  </div>
+  <div class="page">
+    <p>Utututu Happy b'day yaa, can't describe how much i love you...</p>
+  </div>
+  <div class="page">
+    <img src="lembar2.jpg" class="note-img" />
+  </div>
+  <div class="page">
+    <p>Gimana hari inii?? Capeee gaa? Kalo kamu cape istirahatt yaa...</p>
+  </div>
+  <div class="page">
+    <p>Dibukaa yaa kadonya semoga kamu sukaa😋 Semangat berjuang terus yaa...</p>
+  </div>
+  <div class="page">
+    <p>Jangan suka berpikiran aneh aneh! Jangan ngambekan!</p>
+  </div>
+  <div class="page">
+    <img src="lembar6.jpg" class="note-img" />
+  </div>
+  <div class="page">
+    <img src="lembar7.jpg" class="note-img" />
+  </div>
+  <div class="page">
+    <img src="lembar8.jpg" class="note-img" />
+  </div>
+  <div class="page">
+    <img src="lembar9.jpg" class="note-img" />
+  </div>
+  <div class="page">
+    <h2>Terima kasih udah baca!</h2>
+    <p>Selamat tidur cinta~ 🤍💤</p>
+  </div>
+</div><div class="navigation">
+  <button onclick="prevPage()">Prev</button>
+  <button onclick="nextPage()">Next</button>
+</div><script>
+  let currentPage = 0;
+  const pages = document.querySelectorAll('.page');
 
-      let popupStep = 0;
-      let noteStep = 0;
-      const notes = [
-        "Utututu Happy b'day yaa, can't describe how much i love you. Level up todayy semogaa kamu bisa menggapai apa yang kamu mau, yaa? dan bisa jadi apa yang kamu harapkan, be better and just be yourself🤍 apapun keinginan kamu jugaa semoga terkabul yaa, you're shining especially bright todayy💐",
-        "<img src='lembar2.jpg' class='note-img'>",
-        "Gimana hari inii?? Capeee gaa? Kalo kamu capee istirahatt yaa, jangan lupa makan sama banyakin minum air putihh🤍",
-        "Dibukaa yaa kadonya semoga kamu sukaa😋 Semangat berjuang terus yaa sampai kamu bisa mendapatkan apa yang kamu mauu, jangan lupa bersyukur jugaa dan selalu sempatin buat apresiasi diri kamu karena sudah selalu berjuang untuk lebih baik pokoknyaa😙 kalo kamu capee butuh tempat ceritaa ada akuu jangan dipendem sendirii yaa?",
-        "Jangan suka berpikiran aneh aneh!, Jangan ngambekan!, Jangan cuek cuek nanti cepet tua!😒 Kamuu pokoknya gabolee bersaing sama siapapun karnaaa mau gimanapun kamuu tetap pemenangnya. Gaada orang lama, orang baru atau masalalu!! kalo kamu masih mikir gitu kamu kaya e harus tak culik terus tak sekap (dihatiku)🙂",
-        "<img src='lembar6.jpg' class='note-img'>",
-        "<img src='lembar7.jpg' class='note-img'>",
-        "<img src='lembar8.jpg' class='note-img'>",
-        "<img src='lembar9.jpg' class='note-img'>"
-      ];
-
-      window.checkPassword = function() {
-        const input = document.getElementById("passwordInput").value;
-        if (input === correctPassword) {
-          welcomePopup.classList.add("hidden");
-          calendarPopup.classList.remove("hidden");
-          audio.play().catch(err => {
-            console.log("Autoplay diblokir, user harus interaksi lagi:", err);
-          });
-        } else {
-          alert("Password salah yaa coba lagi");
-        }
+  function showPages() {
+    pages.forEach((page, index) => {
+      if (index <= currentPage) {
+        page.classList.add('flipped');
+      } else {
+        page.classList.remove('flipped');
       }
+    });
+  }
 
-      window.nextPopup = function() {
-        popupStep++;
-        calendarPopup.classList.add("hidden");
-        popup1.classList.add("hidden");
-        popup2.classList.add("hidden");
-        finalPopup.classList.add("hidden");
-
-        if (popupStep === 1) {
-          popup1.classList.remove("hidden");
-        } else if (popupStep === 2) {
-          popup2.classList.remove("hidden");
-        } else {
-          finalPopup.classList.remove("hidden");
-        }
-      }
-
-      window.nextNotePage = function() {
-        const noteBox = document.getElementById("noteText");
-        if (!noteBox) return;
-
-        if (noteStep < notes.length) {
-          noteBox.classList.remove("fade-in");
-          void noteBox.offsetWidth;
-          noteBox.innerHTML = notes[noteStep];
-          noteBox.classList.add("fade-in");
-          noteStep++;
-        } else {
-          popup2.classList.add("hidden");
-          finalPopup.classList.remove("hidden");
-        }
-      }
+  function nextPage() {
+    if (currentPage < pages.length - 1) {
+      currentPage++;
+      showPages();
     }
-  </script></body>
+  }
+
+  function prevPage() {
+    if (currentPage > 0) {
+      currentPage--;
+      showPages();
+    }
+  }
+</script></body>
 </html>
