--- a/index.html
+++ b/index.html
@@ -1,134 +1,270 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday - Flipbook</title>
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Syy Stickers - Pembayaran QRIS</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
+    :root {
+      --radius: 16px;
+      --popup-bg: #f7f1ea; /* cream */
+      --shadow: 0 24px 48px -8px rgba(0,0,0,0.15);
+      font-family: system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
+      --transition: .35s cubic-bezier(.4,.2,.2,1);
+    }
+    * { box-sizing:border-box; }
     body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Comic Neue', cursive;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      overflow: hidden;
+      margin:0;
+      min-height:100vh;
+      background: #ece8e1 url('background.jpg') center/cover no-repeat;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:1rem;
+      overflow:hidden;
     }
-    #flipbook {
-      width: 90vw;
-      height: 90vh;
-      margin: 5vh auto;
+    .wrapper {
       position: relative;
-      perspective: 2000px;
-    }
-    .page {
       width: 100%;
-      height: 100%;
-      background: #fff5e6;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      max-width: 420px;
+      padding: 2rem;
+    }
+    .popup {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.2);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      z-index: 50;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity var(--transition);
+    }
+    .popup.active {
+      opacity: 1;
+      pointer-events: all;
+    }
+    .card {
+      background: var(--popup-bg);
+      border-radius: 18px;
+      padding: 1.75rem 2rem;
+      width: 100%;
+      max-width: 360px;
+      position: relative;
+      box-shadow: var(--shadow);
+      display: flex;
+      flex-direction: column;
+      gap: .75rem;
+      overflow: hidden;
+      transform: translateY(20px);
+      transition: transform var(--transition);
+    }
+    .popup.active .card {
+      transform: translateY(0);
+    }
+    h2 {
+      margin:0;
+      font-size:1.4rem;
+      line-height:1.2;
+    }
+    p { margin:0 0 .5rem; }
+    .btn {
+      padding:.75rem 1rem;
+      border:none;
+      border-radius:10px;
+      background:#1f2937;
+      color:#fff;
+      cursor:pointer;
+      font-size:1rem;
+      font-weight:600;
+      transition: filter .2s;
+    }
+    .btn:active { filter: brightness(.9); }
+    .input-group {
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+    }
+    input[type="text"], input[type="number"] {
+      padding:.75rem 1rem;
+      border-radius:10px;
+      border:1px solid #d8ccc0;
+      font-size:1rem;
+      outline:none;
+      background:#fff;
+    }
+
+    .balloons {
       position: absolute;
-      top: 0;
-      left: 0;
-      transform-origin: left;
-      transform-style: preserve-3d;
-      transition: transform 1s;
-      overflow-y: auto;
-      padding: 30px;
+      inset: 0;
+      pointer-events: none;
+      overflow: visible;
     }
-    .page h2, .page p {
-      margin: 20px;
-      font-size: 1.2rem;
+    .balloon {
+      position: absolute;
+      width: 80px;
+      height: 100px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      opacity: 0.9;
+      animation: floatUp linear infinite;
     }
-    .flipped {
-      transform: rotateY(-180deg);
-      z-index: 0;
+    @keyframes floatUp {
+      0% {
+        transform: translateY(100%) scale(0.9);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-120%) scale(1.05);
+        opacity: 0;
+      }
     }
-    .navigation {
-      text-align: center;
-      margin-top: 20px;
-    }
-    button {
-      padding: 10px 20px;
-      border-radius: 10px;
-      background-color: #ffd9b3;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-      margin: 0 5px;
-    }
-    .note-img {
-      max-width: 100%;
-      border-radius: 10px;
+    .small {
+      font-size:.8rem;
+      color:#555;
     }
   </style>
 </head>
-<body><audio id="bgMusic" loop autoplay>
-  <source src="sempurna.mp3" type="audio/mp3">
-</audio><div id="flipbook">
-  <div class="page">
-    <h2>Welcome Arjingga!</h2>
-    <p>Selamat ulang tahunnn! Ayo buka halaman selanjutnya yaa~</p>
-  </div>
-  <div class="page">
-    <p>Utututu Happy b'day yaa, can't describe how much i love you...</p>
-  </div>
-  <div class="page">
-    <img src="lembar2.jpg" class="note-img" />
-  </div>
-  <div class="page">
-    <p>Gimana hari inii?? Capeee gaa? Kalo kamu cape istirahatt yaa...</p>
-  </div>
-  <div class="page">
-    <p>Dibukaa yaa kadonya semoga kamu sukaa😋 Semangat berjuang terus yaa...</p>
-  </div>
-  <div class="page">
-    <p>Jangan suka berpikiran aneh aneh! Jangan ngambekan!</p>
-  </div>
-  <div class="page">
-    <img src="lembar6.jpg" class="note-img" />
-  </div>
-  <div class="page">
-    <img src="lembar7.jpg" class="note-img" />
-  </div>
-  <div class="page">
-    <img src="lembar8.jpg" class="note-img" />
-  </div>
-  <div class="page">
-    <img src="lembar9.jpg" class="note-img" />
-  </div>
-  <div class="page">
-    <h2>Terima kasih udah baca!</h2>
-    <p>Selamat tidur cinta~ 🤍💤</p>
-  </div>
-</div><div class="navigation">
-  <button onclick="prevPage()">Prev</button>
-  <button onclick="nextPage()">Next</button>
-</div><script>
-  let currentPage = 0;
-  const pages = document.querySelectorAll('.page');
+<body>
+  <div class="wrapper" aria-label="Alur pembayaran QRIS Syy Stickers"></div>
 
-  function showPages() {
-    pages.forEach((page, index) => {
-      if (index <= currentPage) {
-        page.classList.add('flipped');
-      } else {
-        page.classList.remove('flipped');
-      }
+  <!-- BALLOONS -->
+  <div class="balloons" aria-hidden="true">
+    <div class="balloon" style="
+      left: 10%;
+      bottom: -10%;
+      width: 60px;
+      height: 80px;
+      background-image: url('haloo1.png');
+      animation-duration: 14s;
+      animation-delay: 0s;
+    "></div>
+    <div class="balloon" style="
+      left: 70%;
+      bottom: -5%;
+      width: 90px;
+      height: 110px;
+      background-image: url('haloo2.png');
+      animation-duration: 17s;
+      animation-delay: 3s;
+    "></div>
+    <div class="balloon" style="
+      left: 40%;
+      bottom: -15%;
+      width: 75px;
+      height: 95px;
+      background-image: url('haloo3.png');
+      animation-duration: 13s;
+      animation-delay: 1s;
+    "></div>
+  </div>
+
+  <!-- POPUP 1 -->
+  <div id="popup-1" class="popup active" role="dialog" aria-modal="true">
+    <div class="card">
+      <div class="small">Notifikasi</div>
+      <h2>Selamat datang di Syy Stickers</h2>
+      <p>Silahkan lanjutkan untuk pembayaran QRIS Anda.</p>
+      <div style="margin-top:8px; display:flex; justify-content:flex-end;">
+        <button class="btn" id="btn-next-1">Lanjutkan</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- POPUP 2 -->
+  <div id="popup-2" class="popup">
+    <div class="card">
+      <div class="small">Langkah 1</div>
+      <h2>Masukkan Nama Anda</h2>
+      <div class="input-group">
+        <input type="text" id="input-nama" placeholder="Contoh: Syahda" />
+      </div>
+      <div style="display:flex; justify-content:flex-end;">
+        <button class="btn" id="btn-next-2" disabled>Lanjutkan</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- POPUP 3 -->
+  <div id="popup-3" class="popup">
+    <div class="card">
+      <div class="small">Langkah 2</div>
+      <h2>Masukkan Jumlah Pembayaran</h2>
+      <div class="input-group">
+        <input type="number" id="input-jumlah" placeholder="Contoh: 50000" min="0" />
+      </div>
+      <div style="display:flex; justify-content:flex-end;">
+        <button class="btn" id="btn-send" disabled>Kirim</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- POPUP 4 -->
+  <div id="popup-4" class="popup">
+    <div class="card">
+      <div class="small">Selesai</div>
+      <h2>Terima kasih telah berbelanja</h2>
+      <p>Pembayaran kamu berhasil disimulasikan.</p>
+      <div style="display:flex; justify-content:center;">
+        <button class="btn" id="btn-restart">Ulangi</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const delay = ms => new Promise(r => setTimeout(r, ms));
+
+    const p1 = document.getElementById('popup-1');
+    const p2 = document.getElementById('popup-2');
+    const p3 = document.getElementById('popup-3');
+    const p4 = document.getElementById('popup-4');
+
+    const btnNext1 = document.getElementById('btn-next-1');
+    const btnNext2 = document.getElementById('btn-next-2');
+    const btnSend = document.getElementById('btn-send');
+    const btnRestart = document.getElementById('btn-restart');
+
+    const inputNama = document.getElementById('input-nama');
+    const inputJumlah = document.getElementById('input-jumlah');
+
+    inputNama.addEventListener('input', () => {
+      btnNext2.disabled = inputNama.value.trim() === '';
     });
-  }
+    inputJumlah.addEventListener('input', () => {
+      btnSend.disabled = inputJumlah.value.trim() === '' || Number(inputJumlah.value) <= 0;
+    });
 
-  function nextPage() {
-    if (currentPage < pages.length - 1) {
-      currentPage++;
-      showPages();
-    }
-  }
+    btnNext1.addEventListener('click', async () => {
+      p1.classList.remove('active');
+      await delay(250);
+      p2.classList.add('active');
+    });
 
-  function prevPage() {
-    if (currentPage > 0) {
-      currentPage--;
-      showPages();
-    }
-  }
-</script></body>
+    btnNext2.addEventListener('click', async () => {
+      p2.classList.remove('active');
+      await delay(200);
+      p3.classList.add('active');
+    });
+
+    btnSend.addEventListener('click', async () => {
+      p3.classList.remove('active');
+      await delay(250);
+      p4.classList.add('active');
+    });
+
+    btnRestart.addEventListener('click', () => {
+      inputNama.value = '';
+      inputJumlah.value = '';
+      btnNext2.disabled = true;
+      btnSend.disabled = true;
+      p4.classList.remove('active');
+      setTimeout(() => { p1.classList.add('active'); }, 150);
+    });
+  </script>
+</body>
 </html>
