--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin:0;
       min-height:100vh;
-      background: #ece8e1 url('background.jpg') center/cover no-repeat;
+      background: #ece8e1 url('img/background1.jpg') center/cover no-repeat;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -140,7 +140,7 @@
       bottom: -10%;
       width: 60px;
       height: 80px;
-      background-image: url('haloo1.png');
+      background-image: url('img/haloo1.png');
       animation-duration: 14s;
       animation-delay: 0s;
     "></div>
@@ -149,7 +149,7 @@
       bottom: -5%;
       width: 90px;
       height: 110px;
-      background-image: url('haloo2.png');
+      background-image: url('img/haloo2.png');
       animation-duration: 17s;
       animation-delay: 3s;
     "></div>
@@ -158,7 +158,7 @@
       bottom: -15%;
       width: 75px;
       height: 95px;
-      background-image: url('haloo3.png');
+      background-image: url('img/haloo3.png');
       animation-duration: 13s;
       animation-delay: 1s;
     "></div>
