--- a/index.html
+++ b/index.html
@@ -6,28 +6,21 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root {
-      --radius: 16px;
-      --popup-bg: #f7f1ea; /* cream */
+      --popup-bg: #f7f1ea;
       --shadow: 0 24px 48px -8px rgba(0,0,0,0.15);
-      font-family: system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
-      --transition: .35s cubic-bezier(.4,.2,.2,1);
+      font-family: sans-serif;
+      --transition: .35s ease;
     }
-    * { box-sizing:border-box; }
+    * { box-sizing: border-box; }
     body {
-      margin:0;
-      min-height:100vh;
+      margin: 0;
+      min-height: 100vh;
       background: #ece8e1 url('img/background1.jpg') center/cover no-repeat;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:1rem;
-      overflow:hidden;
-    }
-    .wrapper {
-      position: relative;
-      width: 100%;
-      max-width: 420px;
-      padding: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+      overflow: hidden;
     }
     .popup {
       position: fixed;
@@ -36,28 +29,22 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 1rem;
-      z-index: 50;
+      z-index: 10;
       opacity: 0;
       pointer-events: none;
       transition: opacity var(--transition);
     }
     .popup.active {
       opacity: 1;
-      pointer-events: all;
+      pointer-events: auto;
     }
     .card {
       background: var(--popup-bg);
-      border-radius: 18px;
-      padding: 1.75rem 2rem;
-      width: 100%;
-      max-width: 360px;
-      position: relative;
+      border-radius: 16px;
+      padding: 2rem;
+      width: 90%;
+      max-width: 400px;
       box-shadow: var(--shadow);
-      display: flex;
-      flex-direction: column;
-      gap: .75rem;
-      overflow: hidden;
       transform: translateY(20px);
       transition: transform var(--transition);
     }
@@ -65,50 +52,41 @@
       transform: translateY(0);
     }
     h2 {
-      margin:0;
-      font-size:1.4rem;
-      line-height:1.2;
+      margin-top: 0;
+      font-size: 1.4rem;
     }
-    p { margin:0 0 .5rem; }
+    p {
+      margin-bottom: 1rem;
+    }
     .btn {
-      padding:.75rem 1rem;
-      border:none;
-      border-radius:10px;
-      background:#1f2937;
-      color:#fff;
-      cursor:pointer;
-      font-size:1rem;
-      font-weight:600;
-      transition: filter .2s;
+      background: #333;
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 1rem;
     }
-    .btn:active { filter: brightness(.9); }
     .input-group {
-      display:flex;
-      flex-direction:column;
-      gap:6px;
+      margin: 1rem 0;
     }
-    input[type="text"], input[type="number"] {
-      padding:.75rem 1rem;
-      border-radius:10px;
-      border:1px solid #d8ccc0;
-      font-size:1rem;
-      outline:none;
-      background:#fff;
+    input {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
     }
-
     .balloons {
       position: absolute;
       inset: 0;
       pointer-events: none;
-      overflow: visible;
     }
     .balloon {
       position: absolute;
-      width: 80px;
-      height: 100px;
-      background-size: contain;
       background-repeat: no-repeat;
-      opacity: 0.9;
+      background-size: contain;
+      opacity: 0.8;
       animation: floatUp linear infinite;
     }
     @keyframes floatUp {
@@ -124,17 +102,12 @@
         opacity: 0;
       }
     }
-    .small {
-      font-size:.8rem;
-      color:#555;
-    }
   </style>
 </head>
 <body>
-  <div class="wrapper" aria-label="Alur pembayaran QRIS Syy Stickers"></div>
 
-  <!-- BALLOONS -->
-  <div class="balloons" aria-hidden="true">
+  <!-- BALLOON EFFECT -->
+  <div class="balloons">
     <div class="balloon" style="
       left: 10%;
       bottom: -10%;
@@ -142,7 +115,6 @@
       height: 80px;
       background-image: url('img/haloo1.png');
       animation-duration: 14s;
-      animation-delay: 0s;
     "></div>
     <div class="balloon" style="
       left: 70%;
@@ -151,7 +123,6 @@
       height: 110px;
       background-image: url('img/haloo2.png');
       animation-duration: 17s;
-      animation-delay: 3s;
     "></div>
     <div class="balloon" style="
       left: 40%;
@@ -160,59 +131,46 @@
       height: 95px;
       background-image: url('img/haloo3.png');
       animation-duration: 13s;
-      animation-delay: 1s;
     "></div>
   </div>
 
-  <!-- POPUP 1 -->
-  <div id="popup-1" class="popup active" role="dialog" aria-modal="true">
+  <!-- POPUP 1: Selamat Datang -->
+  <div id="popup-1" class="popup active">
     <div class="card">
-      <div class="small">Notifikasi</div>
       <h2>Selamat datang di Syy Stickers</h2>
       <p>Silahkan lanjutkan untuk pembayaran QRIS Anda.</p>
-      <div style="margin-top:8px; display:flex; justify-content:flex-end;">
-        <button class="btn" id="btn-next-1">Lanjutkan</button>
-      </div>
+      <button class="btn" id="btn-next-1">Lanjutkan</button>
     </div>
   </div>
 
-  <!-- POPUP 2 -->
+  <!-- POPUP 2: Nama -->
   <div id="popup-2" class="popup">
     <div class="card">
-      <div class="small">Langkah 1</div>
       <h2>Masukkan Nama Anda</h2>
       <div class="input-group">
-        <input type="text" id="input-nama" placeholder="Contoh: Syahda" />
+        <input type="text" id="input-nama" placeholder="Nama kamu..." />
       </div>
-      <div style="display:flex; justify-content:flex-end;">
-        <button class="btn" id="btn-next-2" disabled>Lanjutkan</button>
-      </div>
+      <button class="btn" id="btn-next-2" disabled>Lanjutkan</button>
     </div>
   </div>
 
-  <!-- POPUP 3 -->
+  <!-- POPUP 3: Jumlah -->
   <div id="popup-3" class="popup">
     <div class="card">
-      <div class="small">Langkah 2</div>
       <h2>Masukkan Jumlah Pembayaran</h2>
       <div class="input-group">
-        <input type="number" id="input-jumlah" placeholder="Contoh: 50000" min="0" />
+        <input type="number" id="input-jumlah" placeholder="Contoh: 50000" />
       </div>
-      <div style="display:flex; justify-content:flex-end;">
-        <button class="btn" id="btn-send" disabled>Kirim</button>
-      </div>
+      <button class="btn" id="btn-send" disabled>Kirim</button>
     </div>
   </div>
 
-  <!-- POPUP 4 -->
+  <!-- POPUP 4: Terima Kasih -->
   <div id="popup-4" class="popup">
     <div class="card">
-      <div class="small">Selesai</div>
       <h2>Terima kasih telah berbelanja</h2>
       <p>Pembayaran kamu berhasil disimulasikan.</p>
-      <div style="display:flex; justify-content:center;">
-        <button class="btn" id="btn-restart">Ulangi</button>
-      </div>
+      <button class="btn" id="btn-restart">Ulangi</button>
     </div>
   </div>
 
@@ -247,7 +205,7 @@
 
     btnNext2.addEventListener('click', async () => {
       p2.classList.remove('active');
-      await delay(200);
+      await delay(250);
       p3.classList.add('active');
     });
 
@@ -263,8 +221,9 @@
       btnNext2.disabled = true;
       btnSend.disabled = true;
       p4.classList.remove('active');
-      setTimeout(() => { p1.classList.add('active'); }, 150);
+      setTimeout(() => p1.classList.add('active'), 150);
     });
   </script>
+
 </body>
 </html>
