--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       margin: 0;
       min-height: 100vh;
-      background: #ece8e1 url('img/background1.jpg') center/cover no-repeat;
+      background: #ece8e1 url('background1.jpg') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -113,7 +113,7 @@
       bottom: -10%;
       width: 60px;
       height: 80px;
-      background-image: url('img/haloo1.png');
+      background-image: url('haloo1.png');
       animation-duration: 14s;
     "></div>
     <div class="balloon" style="
@@ -121,7 +121,7 @@
       bottom: -5%;
       width: 90px;
       height: 110px;
-      background-image: url('img/haloo2.png');
+      background-image: url('haloo2.png');
       animation-duration: 17s;
     "></div>
     <div class="balloon" style="
@@ -129,7 +129,7 @@
       bottom: -15%;
       width: 75px;
       height: 95px;
-      background-image: url('img/haloo3.png');
+      background-image: url('haloo3.png');
       animation-duration: 13s;
     "></div>
   </div>
