--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
       text-align: center;
       z-index: 100;
-      animation: fadeIn 0.8s ease;
+      animation: fadeIn 0.5s ease;
     }
     .popup h2 {
       margin-bottom: 20px;
-      font-size: 20px;
+      font-size: 60px;
       color: #333;
     }
     .popup input {
       padding: 10px;
-      width: 80%;
+      width: 90%;
       margin-bottom: 20px;
       border: 1px solid #ccc;
       border-radius: 10px;
@@ -89,7 +89,7 @@
 </div>
 
 <div class="popup" id="popup4" style="display: none;">
-  <h2>Terima kasih telah berbelanja 💖</h2>
+  <h2>Terima kasih telah berbelanja Lopyuu💖</h2>
 </div>
 
 <script>
